[tool.poetry]
name = "hack-testing"
version = "0.1.0"
description = ""
authors = ["haxscramper <haxscramper@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ebooklib = "^0.18"
newspaper3k = "^0.2.8"
lxml-html-clean = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
