[tool.poetry]
name = "hack-testing"
version = "0.1.0"
description = ""
authors = ["haxscramper <haxscramper@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ebooklib = "^0.18"
newspaper3k = "^0.2.8"
lxml-html-clean = "^0.1.1"
geopandas = "^1.0.1"
beartype = "^0.18.5"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
click = "^8.1.7"
evdev = "^1.7.1"
jinja2 = "^3.1.4"
ollama = "^0.3.3"
reportlab = "^4.2.5"
pdfrw = "^0.4"
pandas = "2.2.3"
shapely = "2.0.7"
notion-client = "^2.3.0"
mistune = "^3.1.3"
msgpack = "^1.1.0"
aiohttp = "^3.12.9"
lxml = "^5.4.0"
openai = "^1.97.1"
termcolor = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
