[project]
name = "diagram-layout"
version = "0.1.0"
description = "Diagram drawing layout resolver using kiwisolver and pydantic"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "kiwisolver>=1.4.5",
    "beartype>=0.22.9",
]

[project.scripts]
diagram-layout = "diagram_layout.cli:main"

[dependency-groups]
dev = ["pytest>=8.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.yapf]
based_on_style = "google"
column_limit = 90
indent_width = 4
DISABLE_ENDING_COMMA_HEURISTIC = false
