[project]
name = "ascii-diagram"
version = "0.1.0"
description = "GUI application for editing ASCII diagrams"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "pytest-qt>=4.5.0",
    "pytest",
    "ty>=0.0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
qt_api = "pyside6"
