[tool.poetry]
name = "grabber"
version = "0.1.0"
description = ""
authors = ["haxscramper <haxscramper@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
dominate = "^2.9.1"
imagehash = "^4.3.1"
pdfkit = "^1.0.0"
requests = "^2.31.0"
beartype = "^0.18.5"
pydantic = "^2.8.2"
geopandas = "^1.0.1"
more-itertools = "^10.4.0"
scikit-learn = "^1.6.1"
pywebio = "^1.8.3"
altair = "^5.5.0"
vispy = "^0.14.3"
pyside6 = "^6.8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
