[project]
name = "galaxy-preview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "pyside6>=6.11.0",
    "pyside6-addons>=6.11.0",
    "vispy>=0.16.1",
]
