[project]
name = "gemini-imgui-generator"
version = "0.1.0"
description = "ImGui desktop app for Gemini image generation with input image selection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "google-genai>=1.30.0",
  "imgui[glfw]>=2.0.0",
  "glfw>=2.7.0",
  "PyOpenGL>=3.1.7",
  "Pillow>=10.4.0",
  "PyYAML>=6.0.2",
  "platformdirs>=4.2.2",
  "numpy>=2.4.3",
  "PySide6>=6.7.0",
]

[project.scripts]
gemini-imgui-generator = "gemini_imgui_generator.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*"]
include = ["gemini_imgui_generator*"]

[tool.uv]
package = true
