[project]
name = "index-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "haxscramper", email = "haxscramper@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.22.9",
    "docling>=2.107.0",
    "fitz>=0.0.1.dev2",
    "huggingface-hub>=1.21.0",
    "numpy>=2.5.0",
    "onnxruntime>=1.27.0",
    "openai>=2.44.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "platformdirs>=4.10.0",
    "pykka>=4.4.2",
    "pymupdf4llm>=1.27.2.3",
    "pyside6>=6.11.1",
    "pytest>=9.1.1",
    "python-arango==8.1.6",
    "rich>=15.0.0",
    "zmq>=0.0.0",
]

[project.scripts]
index-service = "index_service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--strict-markers --tb=short -v"
testpaths = ["tests"]
pythonpath = ["src"]
