[project]
name = "standalone-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.22.9",
    "bs4>=0.0.2",
    "click>=8.4.1",
    "css-parser>=1.0.10",
    "ebooklib>=0.20",
    "graphviz>=0.21",
    "html5-parser>=0.4.12",
    "igraph>=1.0.0",
    "joblib>=1.5.3",
    "kiwisolver>=1.5.0",
    "lxml>=6.1.0",
    "mechanize>=0.4.10",
    "msgpack>=1.1.2",
    "pathspec>=1.1.1",
    "plumbum>=1.10.0",
    "pydantic>=2.13.4",
    "pyside6>=6.11.1",
    "pytest>=9.0.3",
    "regex>=2026.5.9",
    "rich>=15.0.0",
    "svgwrite>=1.4.3",
    "tantivy>=0.26.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-cpp>=0.23.4",
]
