[package]
name = "process-profiler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
libc = "0.2"
nix = { version = "0.27", features = ["process", "ptrace", "signal"] }
chrono = { version = "0.4", features = ["serde"] }
procfs = "0.16"
eyre = "0.6"
color-eyre = { version = "0.6", features = ["capture-spantrace"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
